--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shahd5/Pay.git"
+    "url": "https://github.com/shahd5/Pay"
   },
   "author": "Dhruv shah",
   "license": "ISC",
