--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "payroll app",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
     "mysql": "^2.15.0"
   },
   "devDependencies": {},
