Storing time properly

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "payroll app",
   "main": "server.js",
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
