--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "moment": "^2.19.3",
     "mysql": "^2.15.0"
   },
   "devDependencies": {},
